--- a/src/assets/stylesheets/_settings.scss
+++ b/src/assets/stylesheets/_settings.scss
@@ -37,6 +37,10 @@ $uploadTextColor: #004fc4;
 
 .form-field-big {
   height: 48px;
-  border-bottom: 1px solid #3c4257;
+  // border-bottom: 1px solid #3c4257;
   margin-top: 8px;
+}
+
+.ml-5 {
+  margin-left: 5rem !important;
 }
