--- a/src/assets/stylesheets/componentStyles/device-groups.scss
+++ b/src/assets/stylesheets/componentStyles/device-groups.scss
@@ -27,7 +27,7 @@
     }
     .card-titles {
       padding: 10px 0 10px 0;
-      border-bottom: 1px solid #97c1ff;
+      // border-bottom: 1px solid #97c1ff;
       .device-group {
         font-family: Inter;
         font-style: normal;
