--- a/src/assets/stylesheets/componentStyles/services.scss
+++ b/src/assets/stylesheets/componentStyles/services.scss
@@ -140,7 +140,7 @@
 }
 .form-control {
   border-radius: 0;
-  border-bottom: 0.5px solid #3c4257;
+  // border-bottom: 0.5px solid #3c4257;
   margin-top: 8px;
 }
 
