--- a/src/assets/stylesheets/_import.scss
+++ b/src/assets/stylesheets/_import.scss
@@ -7,6 +7,7 @@
 @import "../stylesheets/componentStyles/select-devices.scss";
 @import "../stylesheets/componentStyles/services.scss";
 @import "../stylesheets/componentStyles/device-groups.scss";
+@import "../stylesheets/componentStyles/slices.scss";
 
 @import "../stylesheets/componentStyles/dashboardStyle/dashboard.scss";
 @import "../stylesheets/componentStyles/dashboardStyle/sites.scss";
