--- a/src/assets/stylesheets/componentStyles/navbar.scss
+++ b/src/assets/stylesheets/componentStyles/navbar.scss
@@ -62,9 +62,36 @@ $navbar-height: 50px;
   }
 
   &-ControlsMenu {
-    margin-top: 10px;
+    margin-top: 27px;
     background: $SecondaryColor;
     width: 253px;
+
+    .mat-menu-panel {
+      border-radius: 0px;
+    }
+
+    &_navCard {
+      background: $SecondaryColor;
+      margin-left: -10px;
+      border-top: 1px solid transparent !important;
+      border-radius: 0rem 0rem 0.8rem 0.8rem !important;
+      margin-left: 4rem;
+      width: 15rem !important;
+      height: fit-content;
+    }
+    //
+    &-triangle::after {
+      content: "";
+      position: absolute;
+      right: 4px;
+      top: -22px;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 0 17px 17px 17px;
+      border-color: transparent transparent #ffffff transparent;
+      z-index: 9998;
+    }
 
     &-Title {
       font-weight: 600;
