--- a/src/app/Modules/dashboard/pages/small-cells/small-cells.component.html
+++ b/src/app/Modules/dashboard/pages/small-cells/small-cells.component.html
@@ -616,12 +616,17 @@
                     >
                       <div class="respond">
                         respond
+
                         <img
                           src="assets/AdminPanel/expand.svg"
                           mat-button
                           [matMenuTriggerFor]="belowMenu"
                         />
-                        <mat-menu #belowMenu="matMenu" yPosition="below">
+                        <mat-menu
+                          #belowMenu="matMenu"
+                          yPosition="below"
+                          class="ctm_filter"
+                        >
                           <button
                             mat-menu-item
                             (click)="
