--- a/src/app/Modules/dashboard/dashboard.component.html
+++ b/src/app/Modules/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-sm-6">
+      <div class="col-md-4 col-sm-6" (click)="openDialog()">
         <div class="card card-chart">
           <div class="card-body p-0 d-grid">
             <div class="row">
