--- a/src/assets/stylesheets/componentStyles/dashboardStyle/_slice.scss
+++ b/src/assets/stylesheets/componentStyles/dashboardStyle/_slice.scss
@@ -301,6 +301,24 @@
         }
       }
     }
+    .line-img-first {
+      width: 20px;
+      position: absolute;
+      left: 18%;
+      margin-top: 27px;
+      img {
+        width: 140px;
+      }
+    }
+    .line-img-second {
+      width: 20px;
+      position: absolute;
+      left: 71%;
+      margin-top: 27px;
+      img {
+        width: 140px;
+      }
+    }
   }
 }
 // mat-accordion
@@ -322,6 +340,8 @@
   border: none;
   .customise-row-center {
     align-items: center;
+    position: relative;
+
     // padding-right: 100px;
     width: 100%;
     .functionality-bx {
@@ -353,7 +373,8 @@
       }
     }
     .accordion-section {
-      padding-right: 60px;
+      width: 100%;
+      // padding-right: 60px;
       @media only screen and (max-width: 1440px) {
         padding-right: 0;
       }
@@ -516,7 +537,7 @@
       }
     }
     .graph-detail-bx {
-      max-width: 80%;
+      max-width: 100%;
       padding: 0;
       border-radius: 16px;
       margin: 0 auto;
@@ -694,7 +715,7 @@
             }
             .graph-img-bx {
               img {
-                width: 100%;
+                // width: 100%;
               }
             }
           }
@@ -709,8 +730,102 @@
       border-radius: 4px;
       background-color: #0063f7;
       color: #fff;
+      position: absolute;
+      top: 409px;
+      width: 400px;
+
       p {
         margin-bottom: 0;
+      }
+    }
+    .slice {
+      position: relative;
+      // height: 100px;
+      padding: 20px;
+      &__deviceGroups {
+        position: absolute;
+        width: 523px;
+        display: flex;
+        align-items: center;
+        // top: 10%;
+
+        // border: 1px solid red;
+        // height: 10px;
+        justify-content: center;
+        cursor: pointer;
+        &--expanded {
+          height: 220px;
+        }
+      }
+
+      &__slice-details {
+        position: absolute;
+        width: 400px;
+        left: 650px;
+        height: 400px;
+        // border: 1px solid blue;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      &__slice-details_smallcells {
+        position: absolute;
+        width: 282px;
+        left: 650px;
+        height: 400px;
+        // border: 1px solid blue;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      &__applications {
+        position: absolute;
+        width: 300px;
+        left: 80%;
+        height: 114px;
+        top: 178px;
+
+        // border: 1px solid green;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      &__applications_expand {
+        position: absolute;
+        width: 300px;
+        left: 80%;
+        height: 114px;
+        top: 160px;
+        // border: 1px solid green;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      &__applications_smallcells {
+        position: absolute;
+        width: 582px;
+
+        // left: 80%;
+        height: 114px;
+        // top: 178px;
+
+        // border: 1px solid green;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      &__applications_smallcells_expand {
+        position: absolute;
+        width: 400px;
+        margin-top: 35px;
+        // left: 80%;
+        height: 114px;
+        // top: 178px;
+
+        // border: 1px solid green;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     }
   }
@@ -743,6 +858,8 @@
 }
 
 .left-accordion-section {
+  padding-right: 60px;
+  // padding-top: 78px;
   .accordion-item {
     border: 1px solid #fb8500 !important;
     .accordion-header {
