--- a/src/assets/stylesheets/_settings.scss
+++ b/src/assets/stylesheets/_settings.scss
@@ -40,3 +40,57 @@ $uploadTextColor: #004fc4;
   border-bottom: 1px solid #3c4257;
   margin-top: 8px;
 }
+
+.dashboard {
+  &__device-icon {
+    color: white;
+  }
+  &__cell-icon {
+    // color: white;
+  }
+
+  &__menu {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    min-height: 200px;
+    min-width: 250px;
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+    &__centered {
+      text-align: center;
+    }
+    &__details {
+      color: #0063f7;
+      margin-top: auto;
+    }
+    &__site {
+      color: #3c4257;
+      font-weight: 600;
+      &--big {
+        font-size: 16px;
+      }
+    }
+    &__small-cell {
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 86px;
+      min-height: 28px;
+      border-radius: 27px;
+      background: #06d6a0;
+      gap: 5px;
+      font-size: 600;
+      align-self: center;
+      padding: 5px 10px;
+    }
+    &__device {
+      font-weight: 600;
+      font-size: 16px;
+      color: #0063f7;
+    }
+  }
+}
